# opensymphony

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
opensymphony/: __init__.py  archive.py  echo.py  event_bus.py  intent_bridge.py  kernel.py  pipeline.py  session.py  skill_registry.py  telemetry.py
opensymphony/agents/: agent.py  soul.py  soul_compiler.py  soul_spec.py
opensymphony/apps/: __init__.py
opensymphony/gateway/: bridge.py  http.py  human_adapter.py
opensymphony/governance/: __init__.py  defense.py  hitl.py  human_safety.py  middleware.py  precedent.py  voting.py
opensymphony/llm/: router.py
opensymphony/memory/: l1.py  l2.py  l3.py
opensymphony/runtime/: pool.py  sandbox.py  scheduler.py
opensymphony/tools/: character_card.py  production.py  (+1 more)
scripts/: .deploy_env.example  deploy_persistence.sh  install_nssm.bat  start_svc_nssm.bat
souls/: athena.yaml  code.yaml  crit.yaml  default.yaml  drama_director.yaml  legal_writer.yaml  novelist.yaml  reflector.yaml  screenwriter.yaml  shield.yaml  social_copy.yaml  tech_blogger.yaml  themis.yaml
tests/: test_chapter_pipeline.py  test_factory.py  test_function_calling.py  test_handoff.py  test_mvp_human_pipe.py  test_mvp_intent_bridge.py  test_mvp_soul_dual_output.py  test_novel.py  test_novel_e2e.py  test_novel_p1.py  test_novel_p2.py  test_phase0_e2e.py  test_phase1_e2e.py  test_phase2_governance.py  test_phase3_runtime.py  test_phase4_bridge.py  test_pipeline.py  test_tool_use.py  test_truth_updater.py  test_updaters.py  test_v03_human_e2e.py
(+16 files in other folders)
